# mlservice

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_library.yaml  github-deploy.yml
external_routes/: external_sample.py
external_routes/demo/: external_models.py  models.py  routes.py
external_routes/mldemo/: dummy.py  dummy_decorator.py
external_routes/sklearn/: tab_model.py
mlservice/: main.py
mlservice/core/: __init__.py  ml.py  registry.py  tabml.py  upload_routes.py  utils.py
mlservice/demo/: routes.py
mlservice/routes/: __init__.py
mlservice/tests/: test_main.py  test_registry.py
tests/: test_dummy.py  test_dummy_decorator.py  test_main.py  test_registry.py  test_tab_model.py  test_upload_routes.py  test_utils.py
